# ils

./: .gitignore  ARCHITECTURE.md  Cargo.toml  HOMEBREW.md  LICENSE  README.md  colors.toml  ils.rb  keybindings.toml  settings.toml
src/: main.rs
