[package]
name = "ils"
version = "0.1.1"
edition = "2021"
authors = ["Jordan Nakamoto <jordannakamoto@outlook.com>"]
description = "Interactive ls - A fast, keyboard-driven file browser for the terminal"
repository = "https://github.com/jordannakamoto/ils"
license = "MIT"
keywords = ["cli", "file-browser", "terminal", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "ils-bin"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
syntect = "5.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.25"
viuer = "0.7"
pdf-extract = "0.7"
